# g3

./: README.md  package-lock.json  package.json
public/: index.html  splashscreen.html
src/: App.tsx  error-page.jsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: command.rs  config.rs  db.rs  main.rs  trader.rs
src/routes/: account.css  account.tsx  broker.tsx  instrument.tsx  log.tsx  market_data.tsx  order.tsx  position.tsx  position_detail.tsx  root.tsx  trade.tsx  trading.tsx
