[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-ask"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.11"
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", branch = "master", features = [
	"default",
	"env-filter",
	"json",
	"std",
	"chrono",
] }
ctp-futures = { git = "https://github.com/mineralres/rust-share", branch = "main" }
rust-share-util = { git = "https://github.com/mineralres/rust-share", branch = "main" }
tracing = { git = "https://github.com/tokio-rs/tracing", branch = "master", version = "0.2" }
tracing-appender = { git = "https://github.com/tokio-rs/tracing", branch = "master", version = "*" }
tracing-log = { git = "https://github.com/tokio-rs/tracing", branch = "master", version = "*" }
futures = "0.3.5"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
itertools = "0.12"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
